sass edits, fix file tree overflow

--- a/client/src/styles/scss/partials/_fileViewer.scss
+++ b/client/src/styles/scss/partials/_fileViewer.scss
@@ -8,16 +8,16 @@
     min-height: 100%;
 
     .CodeMirror {
-      min-height: 40vh;
+      min-height: 42vh;
     }
   }
 
   .theme-select-container {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
-    height: 8vh;
+    height: 6vh;
     background-color: rgba(0,0,0,0.6);
     
     .select-text {
